Cards flip instead of hovering + Scrollbars + Fixed SpotifyURL issue when adding artists

--- a/client-side/style.css
+++ b/client-side/style.css
@@ -217,25 +217,11 @@ html {
 }
 
 
-.card-1:hover {
+.flip-card {
 	cursor: pointer;
-	transform: rotateY(180deg);
-  }
-
-.card-2:hover {
-	cursor: pointer;
-	transform: rotateY(180deg);
 }
 
-.card-3:hover {
-	cursor: pointer;
-	transform: rotateY(180deg);
-}
-
-
-
-.card-4:hover {
-	cursor: pointer;
+.flipped {
 	transform: rotateY(180deg);
 }
 
@@ -444,7 +430,34 @@ html {
 	border: none;
 }
 
+/* Custom scrollbar taken and editted from https://ishadeed.com/article/custom-scrollbars-css/ */
+.scrollbar::-webkit-scrollbar {
+	width: 6px;
+	margin-right: 3px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+	background-color: transparent;
+	border-radius: 100px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+	background-color: #b6b6b663;
+	border-radius: 100px;
+}
+
 @media (min-width: 320px) and (max-width:1200px){
+	.navbar-nav {
+		display: flex;
+		flex-direction: row !important;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.nav-item {
+		margin-right: 20px;
+	}
+
 	.main-section{
 		width:100%;
 		height:100%;
@@ -554,6 +567,17 @@ html {
 }
 
 @media (max-height:900px){
+	.navbar-nav {
+		display: flex;
+		flex-direction: row !important;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.nav-item {
+		margin-right: 20px;
+	}
+	
 	.main-section{
 		width:100%;
 		height:100%;
